# spark-k8s-toolkit-py

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  renovate.json  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml  CODEOWNERS  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-checks.yaml  ci-tests.yaml  on_pull_request.yaml  release.yaml  release_github.yaml  sync_issue_to_jira.yaml
spark8t/: __init__.py  domain.py  exceptions.py  literals.py  services.py  session.py  spark_interface.py  utils.py
spark8t/cli/: __init__.py  args.py  params.py  pyspark.py  service_account_registry.py  spark_shell.py  spark_sql.py  spark_submit.py
spark8t/cli/lib/: process_settings.py
spark8t/core/: domain.py  literals.py
spark8t/core/domain/: defaults.py  kubernetes_resource_type.py  properties_file.py  service_account.py
spark8t/core/lib/: logging.py  utils.py
spark8t/core/services/: kubeinterface.py  service_account.py  spark_interface.py
spark8t/kube_interface/: __init__.py  base.py  kubectl.py  lightkube.py
spark8t/lib/: params.py  process_settings.py
spark8t/registry/: __init__.py  base.py  k8s.py  memory.py
spark8t/resources/: logging.yaml
spark8t/resources/templates/: role_yaml.tmpl  rolebinding_yaml.tmpl  serviceaccount_yaml.tmpl
spark_client/: domain.py  exceptions.py  services.py
spark_client/cli/: __init__.py  pyspark.py  service_account_registry.py  spark_shell.py  spark_submit.py
spark_client/resources/conf/: spark-defaults.conf
spark_client/resources/templates/: role_yaml.tmpl  rolebinding_yaml.tmpl  serviceaccount_yaml.tmpl
tests/: __init__.py
tests/integration/: config-microk8s.sh  conftest.py  helpers.py  setup-microk8s.sh  test_cli_service_accounts.py  test_kube_interface.py  test_registry.py  test_service_accounts.py  test_spark_session.py  tests_in_pods.sh
tests/integration/resources/: spark-session-test-driver.yaml  spark_session_job.py
tests/resources/: logging.yaml  namespace-exp.yaml  pod.yaml
tests/unittest/: conftest.py  test_argument_parsing.py  test_domain.py  test_logging.py  test_sa_registry.py  test_services.py  test_session.py  test_utils.py
