[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=./spark8t"

[tool.flake8]
per-file-ignores = [
    '__init__.py:F401',
    'tests/*: D',
    'tests/test_utils.py: D, F601'
]
ignore = [
    # Ignored by black
    'E203', 'E266', 'E501', 'W503',
    # Ignored to conform to PEP257
    'D203', 'D212', 'D213', 'D214', 'D215', 'D404', 'D405', 'D406', 'D407', 'D408', 'D409', 'D410', 'D411',
    'D413', 'D415', 'D416', 'D417',
    # Ignored to work with Sphinx
    'RST303', 'RST304', 'RST307'
]
# line length is intentionally set to 80 here because black uses Bugbear
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length for more details
max-line-length = "120"
max-complexity = "18"
select = ['B','C','D','E','F','W','T4','B9','RST','DAR']
docstring_style = "sphinx"

[tool.isort]
py_version = 3
profile = 'black'
known_first_party = ['spark8t','tests']
skip_gitignore = true

[tool.mypy]
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
    "parameterized",
    "envyaml",
    "pytest"
]
ignore_missing_imports = true

[tool.poetry]
name = "spark8t"
version = "0.0.11"
description = "This project provides some utilities function and CLI commands to run Spark on K8s."
authors = [
    "Canonical Data Platform <data-platform@lists.launchpad.net>"
]
license = "Apache-2.0"
readme = "README.md"
packages = []

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.0"

[tool.poetry.dependencies]
python = ">3.8,<4.0"
lightkube = ">=0.11"
jinja2 = ">=3.1.2"
envyaml = ">=1.10.211231"

[tool.poetry.group.fmt]
optional = true

[tool.poetry.group.fmt.dependencies]
black = ">=21.12b0"
isort = ">=5.10"
lightkube = ">=0.11"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = "^2.1.0"
flake8 = ">=4.0.1"
Flake8-pyproject = ">=1.1.0"
mypy = ">=0.910"
pytest-mypy = ">=0.10.3"
lightkube = ">=0.11"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
tox = ">3.21.4"
mypy = ">=0.910"
pytest-cov = ">=3.0"
pytest = ">=6.2"
pytest-mock = ">=3.10"
lightkube = ">=0.11"
pyOpenSSL = ">=23.1.1"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
tox = ">3.21.4"
mypy = ">=0.910"
pytest-cov = ">=3.0"
pytest = ">=6.2"
pytest-mock = ">=3.10"
lightkube = ">=0.11"
parameterized = ">=0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

